--- a/BotTibia/MainWindow.xaml
+++ b/BotTibia/MainWindow.xaml
@@ -13,6 +13,11 @@
                 <x:Type TypeName="local:EnumAction"/>
             </ObjectDataProvider.MethodParameters>
         </ObjectDataProvider>
+        <ObjectDataProvider MethodName="GetValues" ObjectType="{x:Type sys:Enum}" x:Key="GetEnumValuesBackpacks">
+            <ObjectDataProvider.MethodParameters>
+                <x:Type TypeName="local:EnumBackpacks"/>
+            </ObjectDataProvider.MethodParameters>
+        </ObjectDataProvider>
     </Window.Resources>
     <Grid x:Name="Main" Background="#FFDADADA" Margin="1,-2,0,0" VerticalAlignment="Top" Height="600">
         <Menu Panel.ZIndex="9997" Margin="2,2,3,580" Background="#FFDADADA" Foreground="#FF000000">
@@ -114,11 +119,11 @@
                             <DataGridTextColumn Header="Id" Width="40" Binding="{Binding Index}" />
                             <DataGridTextColumn Header="Type" Width="70" Binding="{Binding Type}"  />
                             <DataGridComboBoxColumn Header="TypeAction" Width="100" ItemsSource="{Binding Source={StaticResource GetEnumValues}}" SelectedValueBinding="{Binding TypeAction}" >
-                            <DataGridComboBoxColumn.EditingElementStyle>
-                                <Style TargetType="{x:Type ComboBox}">
-                                    <EventSetter Event="SelectionChanged" Handler="SomeDataGridComboBoxChanged" />
-                                </Style>
-                            </DataGridComboBoxColumn.EditingElementStyle>
+                                <DataGridComboBoxColumn.EditingElementStyle>
+                                    <Style TargetType="{x:Type ComboBox}">
+                                        <EventSetter Event="SelectionChanged" Handler="SomeDataGridComboBoxChanged" />
+                                    </Style>
+                                </DataGridComboBoxColumn.EditingElementStyle>
                             </DataGridComboBoxColumn>
                             <DataGridTextColumn Header="Coordenada" Width="150" Binding="{Binding Coordenada}" />
                             <DataGridTextColumn Header="Range" Width="50" Binding="{Binding Range}" />
@@ -161,6 +166,21 @@
                         <TextBox x:Name="variaveisGlobais" HorizontalAlignment="Left" Height="397" Margin="23,13,0,0" TextWrapping="Wrap" VerticalScrollBarVisibility="Visible" AcceptsReturn="True" VerticalAlignment="Top" Width="253"/>
                     </GroupBox>
                     <Button x:Name="buttonSalvarVariaveis" Content="Salvar" HorizontalAlignment="Left" Margin="579,463,0,17" Width="75" Click="AtualizaVariaveisGlobais"/>
+                    <GroupBox Header="Backpacks" Margin="12,28,548,288" BorderBrush="Black" >
+                        <Grid  HorizontalAlignment="Stretch" VerticalAlignment="Center" Height="160" Margin="0,6,-1,5">
+                            <Label x:Name="MainBPLabel" Content="Main:" HorizontalAlignment="Left" VerticalAlignment="Top" RenderTransformOrigin="1.135,2.208" Width="47" Margin="1,1,0,0"/>
+                            <ComboBox x:Name="MainBP" HorizontalAlignment="Left" Margin="64,4,0,0" VerticalAlignment="Top" Width="126" ItemsSource="{Binding Source={StaticResource GetEnumValuesBackpacks}}" SelectionChanged="MainBP_SelectionChanged"/>
+                            <Label x:Name="SupplyBPLabel" Content="Supply:" HorizontalAlignment="Left" Margin="1,31,0,0" VerticalAlignment="Top" RenderTransformOrigin="1.135,2.208" Width="59" />
+                            <ComboBox x:Name="SupplyBP" HorizontalAlignment="Left" Margin="64,34,0,0" VerticalAlignment="Top" Width="126" ItemsSource="{Binding Source={StaticResource GetEnumValuesBackpacks}}" SelectionChanged="SupplyBP_SelectionChanged"/>
+                            <Label x:Name="LootBPLabel" Content="Loot:" HorizontalAlignment="Left" Margin="1,61,0,0" VerticalAlignment="Top" RenderTransformOrigin="1.135,2.208" Width="47"/>
+                            <ComboBox x:Name="LootBP" HorizontalAlignment="Left" Margin="64,64,0,0" VerticalAlignment="Top" Width="126" ItemsSource="{Binding Source={StaticResource GetEnumValuesBackpacks}}" SelectionChanged="LootBP_SelectionChanged"/>
+                            <Label x:Name="GoldBPLabel" Content="Gold:" HorizontalAlignment="Left" Margin="1,91,0,0" VerticalAlignment="Top" RenderTransformOrigin="1.135,2.208" Width="47"/>
+                            <ComboBox x:Name="GoldBP" HorizontalAlignment="Left" Margin="64,94,0,0" VerticalAlignment="Top" Width="126" ItemsSource="{Binding Source={StaticResource GetEnumValuesBackpacks}}" SelectionChanged="GoldBP_SelectionChanged"/>
+                            <Label x:Name="AmmoBPLabel" Content="Ammo:" HorizontalAlignment="Left" Margin="1,121,0,0" VerticalAlignment="Top" RenderTransformOrigin="1.135,2.208" Width="47"/>
+                            <ComboBox x:Name="AmmoBP" HorizontalAlignment="Left" Margin="64,124,0,0" VerticalAlignment="Top" Width="126" ItemsSource="{Binding Source={StaticResource GetEnumValuesBackpacks}}" SelectionChanged="AmmoBP_SelectionChanged"/>
+                        </Grid>
+                    </GroupBox>
+
                 </Grid>
             </TabItem>
         </TabControl>
